docs/css/styles.css
/* Auto scroll snap */

@view-transition {
  navigation: auto;
}

.row, .column {
  scroll-snap-align: start; 
}

html {
  scroll-behavior: smooth;
  scroll-padding-top: 100px;
  scroll-snap-type: y proximity;
}

/* TYPETR base colors */

.gray-dark {
    color: #202020;
}
.gray-light {
    color: #E6E6E6;
}
.red {
    color: #CC0256;
}
.yellow {
    color: #A5B306;
}
.blue {
    color: #3360B9;
}

/* Reset */

h1, h2, h3, h4, h5, h6,
.sectionNavList a:link, .sectionNavList a:visited, .sectionNavList a:active {
    font-style: normal;
    font-weight: none; /* or 400 */
    font-synthesis: none; /* prevent browser from faking bold/italic */
}
h2 a:link, h2 a:visited, h2 a:active,
.sectionNavList a:link, .sectionNavList a:visited, .sectionNavList a:active  {
    font-family: "Upgrade Medium";    
    text-decoration: none;
    font-size: 1.1em;
    font-weight: 600;
    color: #202020;
}

h2 a:hover, .sectionNavList a:hover {
    color: #E31C79;  
}

h2 a:active, .sectionNavList a:active {
    color: #E31C79;  
}

p a:link, p a:visited, p a:active {
    text-decoration: none;
    color: #202020;
}
p a:hover {
    color: #E31C79;
}

ul li, ol li {
    line-height: 1.4em;
    padding-top: 0.7em;
}

li a:link, li a:visited, li a:active, {
    font-family: "Upgrade Medium";    
    font-weight: 400;
    letter-spacing: 0.04em;
    text-decoration: none;
    color: #202020;
}
li a:hover {
    color: #808080;
}

.leading09 {
    line-height: 0.9em;
}
.leading1 {
    line-height: 1em;
}
.leading12 {
    line-height: 1.2em;
}
.leading13 {
    line-height: 1.3em;
}
.leading14 {
    line-height: 1.4em;
}
.leading15 {
    line-height: 1.5em;
}
.leading18 {
    line-height: 1.8em;
}

/* General Styles */

/* Animation */
@keyframes slideDown {
  0% {
    transform: translateY(-100%);
    opacity: 0;
  }
  100% {
    transform: translateY(0);
    opacity: 1;
  }
}

@keyframes slideLeft {
  0% {
    transform: translateX(100vw);
    opacity: 0;
  }
  100% {
    transform: translateX(0);
    opacity: 1;
  }
}

@keyframes slideIn {
  0% {
    transform: translateX(100vw);
    opacity: 0;
  }
  100% {
    transform: translateX(0);
    opacity: 1;
  }
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

body {
  font-family: "Upgrade Regular", sans-serif; 
  margin: 0;
  padding: 0;
  scroll-behavior: auto;
  background-color: white;
  width: 100vw;
  overflow-x: hidden;
  line-height: 1;
  -webkit-text-size-adjust: none;
}

header {
    display: block;
    height: 50px;
    padding: 10px;
    background-color: black;
    color: white;
    border-bottom: 1px white solid;
    position: fixed;
    z-index: 100;
    width: 100%;
    box-shadow: 0 14px 16px rgba(0, 0, 0, 0.2);
    z-index: 899; /* Position z-layer under Fontdue cart boxes */ 
    animation: slideDown 0.4s ease-out forwards;
}


.top-under-menu {
    padding-top: 5em;
}
.name-title {
    font-size: 5em;  
    padding-top: 0.25em; 
    text-align: center; 
}
.name-title a {
    text-decoration: none;
    color: black;
    letter-spacing: 0;
}
.name-title a:hover {
    color: #E31C79;  
}

/* Font stuff */

.presti { 
    font-family: "Presti Text Normal";    
    font-feature-settings: 'ss01': 1, 'liga': 1; /* Allow flourishes as ~tru4 */
    font-weight: 400;
    letter-spacing: 0.02em;
}
.presti-bold {
    font-family: "Presti Deck Bold";    
    font-feature-settings: 'ss01': 1, 'liga': 1; /* Allow flourishes as ~tru4 */
    font-weight: 400;
    letter-spacing: 0.02em;
}
.presti p {
    line-height: 1.4em;
    font-feature-settings: 'ss01': 1, 'liga': 1; /* Allow flourishes as ~tru4 */
}


/* Presti VF Display */

.presti-thin {
    font-family: "Presti VF Regular";
    font-style: normal;
    font-weight: 400;
    font-variation-settings: 'opsz' 36, 'wght' 100;
}
.presti-light {
    font-family: "Presti VF Regular";
    font-style: normal;
    font-weight: 400;
    font-variation-settings: 'opsz' 36, 'wght' 200;
}
.presti-book {
    font-family: "Presti VF Regular";
    font-style: normal;
    font-weight: 400;
    font-variation-settings: 'opsz' 36, 'wght' 300;
}
.presti-normal {
    font-family: "Presti VF Regular";
    font-style: normal;
    font-weight: 400;
    font-variation-settings: 'opsz' 36, 'wght' 350;
}
.presti-regular {
    font-family: "Presti VF Regular";
    font-style: normal;
    font-weight: 400;
    font-variation-settings: 'opsz' 36, 'wght' 400;
}
.presti-standard {
    font-family: "Presti VF Regular";
    font-style: normal;
    font-weight: 400;
    font-variation-settings: 'opsz' 36, 'wght' 450;
}
.presti-medium {
    font-family: "Presti VF Regular";
    font-style: normal;
    font-weight: 400;
    font-variation-settings: 'opsz' 36, 'wght' 500;
}
.presti-semibold {
    font-family: "Presti VF Regular";
    font-style: normal;
    font-weight: 400;
    font-variation-settings: 'opsz' 36, 'wght' 600;
}
.presti-bold {
    font-family: "Presti VF Regular";
    font-style: normal;
    font-weight: 400;
    font-variation-settings: 'opsz' 36, 'wght' 700;
}
.presti-extrabold {
    font-family: "Presti VF Regular";
    font-style: normal;
    font-weight: 400;
    font-variation-settings: 'opsz' 36, 'wght' 800;
}
.presti-black {
    font-family: "Presti VF Regular";
    font-style: normal;
    font-weight: 400;
    font-variation-settings: 'opsz' 36, 'wght' 900;
}

/* Presti VF Head */

.presti-thin {
    font-family: "Presti VF Regular";
    font-style: normal;
    font-weight: 400;
    font-variation-settings: 'opsz' 24, 'wght' 100;
}
.presti-light {
    font-family: "Presti VF Regular";
    font-style: normal;
    font-weight: 400;
    font-variation-settings: 'opsz' 24, 'wght' 200;
}
.presti-book {
    font-family: "Presti VF Regular";
    font-style: normal;
    font-weight: 400;
    font-variation-settings: 'opsz' 24, 'wght' 300;
}
.presti-normal {
    font-family: "Presti VF Regular";
    font-style: normal;
    font-weight: 400;
    font-variation-settings: 'opsz' 24, 'wght' 350;
}
/* ... */

